# Sensor-Team-Capstone

./: README.md
accel_mag/: README.md  i2c_main.c  spi_main.c  test_spi_main.c
hello_world/: CMakeLists.txt  README.md  TOF_data.txt  TOF_individual.py  hello_world  hello_world.c  hello_world_real.c  object_detection.py  tof_test.py  tof_test_real.py
hello_world/dac_spi/: CMakeLists.txt  orin_spi.c  orin_spi.h  setDAC.c  spidev_test.c  test.c
ublox-mp8/: README.md  coord_move.txt  main.py  pyproject.toml
